--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_users">Users</string>
+    <string name="menu_create_communities">Create Community</string>
     <string name="menu_communities">Communities</string>
     <string name="menu_sign_out">Sign Out</string>
 
@@ -18,4 +19,6 @@
     <string name="sign_in_google">Sign In with Google</string>
     <string name="sign_in_email">Sign In with Email</string>
     <string name="sign_in_phone">Sign In with Phone</string>
+
+    <string name="create_community"> Create Community </string>
 </resources>
